@@ -69,12 +69,12 @@
           online repositories - many of these are not present in the
           installation DVD repository.</para>
 
-          <screen><prompt>$</prompt> <command>sudo zypper install perl-Config-Simple perl-DateTime \
+          <screen><prompt>$</prompt> <command>sudo</command> <command>zypper</command> install perl-Config-Simple perl-DateTime \
 perl-DateTime-Format-DateParse perl-DBD-SQLite perl-DBI \
 perl-File-Find-Rule perl-File-Which perl-HTML-Format \
 perl-Locale-MakeText-Gettext perl-Template-Toolkit \
 perl-Test-Deep perl-Test-Pod perl-XML-LibXSLT \
-perl-YAML liberation-fonts</command></screen>
+perl-YAML liberation-fonts</screen>
 
           <note>
             <para><filename>Liberation-fonts</filename> is most likely already
@@ -88,39 +88,37 @@ perl-YAML liberation-fonts</command></screen>
           dependencies which cannot be installed by
           <application>zypper</application>:</para>
 
-          <screen><prompt>$</prompt> <command>sudo sh
-cpan File::pushd File::Copy::Recursive Locale::PO pp \
+          <screen><prompt>$</prompt> <command>sudo</command> <command>sh</command>
+<prompt>#</prompt> <command>cpan</command> File::pushd File::Copy::Recursive Locale::PO pp \
 Syntax::Highlight::Engine::Kate XML::TreeBuilder
-exit
-</command></screen>
+<prompt>#</prompt> <command>exit</command></screen>
         </step>
 
         <step>
           <para>Download the source code:</para>
 
-          <screen><prompt>$</prompt> <command>cd ~
-mkdir -p SourceCode/publican
-cd SourceCode/publican
-svn checkout http://svn.fedorahosted.org/svn/publican/branches/publican-2x ./
-</command></screen>
+          <screen><prompt>$</prompt> <command>cd</command> ~
+<prompt>$</prompt> <command>mkdir</command> -p SourceCode/publican
+<prompt>$</prompt> <command>cd</command> SourceCode/publican
+<prompt>$</prompt> <command>svn</command> checkout http://svn.fedorahosted.org/svn/publican/branches/publican-2x ./
+</screen>
         </step>
 
         <step>
           <para>Build the <application>Publican</application> build
           script:</para>
 
-          <screen><prompt>$</prompt> <command>perl Build.PL
-</command></screen>
+          <screen><prompt>$</prompt> <command>perl</command> Build.PL</screen>
 
           <para>If all the dependencies are installed, you should see the
           following:</para>
 
-          <screen><computeroutput>WARNING: the following files are missing in your kit:</computeroutput>
-<computeroutput>        META.yml</computeroutput>
-<computeroutput> Please inform the author.</computeroutput>
+          <screen>WARNING: the following files are missing in your kit:
+        META.yml
+Please inform the author.
 
-<computeroutput>Created MYMETA.yml and MYMETA.json</computeroutput>
-<computeroutput>Creating new 'Build' script for 'Publican' version '2.9'</computeroutput></screen>
+Created MYMETA.yml and MYMETA.json
+Creating new 'Build' script for 'Publican' version '2.9'</screen>
 
           <para>If not, then use <application>cpan</application> (as root) to
           install the missing modules and run the build again. Replace any
@@ -129,45 +127,42 @@ svn checkout http://svn.fedorahosted.org/svn/publican/branches/publican-2x ./
           <filename>File/pushd.pm</filename> is reported as missing, you would
           use this to install it:</para>
 
-          <screen><prompt>$</prompt> <command>sudo sh
-cpan File::pushd
-exit
-</command></screen>
+          <screen><prompt>$</prompt> <command>sudo</command> <command>sh</command>
+<prompt>#</prompt> <command>cpan</command> File::pushd
+<prompt>#</prompt> <command>exit</command></screen>
 
           <para>Assuming all went well, the <filename>Build.PL</filename>
           script will have created a new script named
           <filename>Build</filename> which we will use to create, test and
           install <application>Publican</application> 2.9.</para>
 
-          <screen><prompt>$</prompt> <command>./Build
-</command></screen>
+          <screen><prompt>$</prompt> <command>./Build</command></screen>
 
           <para>There will be lots of text scrolling up the screen for a few
           minutes, you should eventually see the following:</para>
 
-          <screen><computeroutput>DEBUG: Publican::Builder: end of build</computeroutput></screen>
+          <screen>DEBUG: Publican::Builder: end of build</screen>
         </step>
 
         <step>
           <para>Test the build:</para>
 
-          <screen><prompt>$</prompt> <command>./Build test
-</command></screen>
+          <screen><prompt>$</prompt> <command>./Build test</command></screen>
 
           <para>Again, lots of scrolling text at the end of which you may see
           the following:</para>
 
-          <screen><computeroutput>Test Summary Report</computeroutput>
-<computeroutput>-------------------</computeroutput>
-<computeroutput>t/910.publican.Users_Guide.t (Wstat: 256 Tests: 5 Failed: 1)</computeroutput>
-<computeroutput>  Failed test:  5</computeroutput>
-<computeroutput>  Non-zero exit status: 1</computeroutput>
-<computeroutput>t/pod-coverage.t            (Wstat: 256 Tests: 9 Failed: 1)</computeroutput>
-<computeroutput>  Failed test:  7</computeroutput>
-<computeroutput>  Non-zero exit status: 1</computeroutput>
-<computeroutput>Files=10, Tests=68, 420 wallclock secs ( 0.31 usr  0.17 sys + 246.87 cusr 18.73 csys = 266.08 CPU)</computeroutput>
-<computeroutput>Result: FAIL</computeroutput>
-<computeroutput>Failed 2/10 test programs. 2/68 subtests failed.</computeroutput></screen>
+          <screen>Test Summary Report
+-------------------
+t/910.publican.Users_Guide.t (Wstat: 256 Tests: 5 Failed: 1)
+  Failed test:  5
+  Non-zero exit status: 1
+t/pod-coverage.t            (Wstat: 256 Tests: 9 Failed: 1)
+  Failed test:  7
+  Non-zero exit status: 1
+Files=10, Tests=68, 420 wallclock secs ( 0.31 usr  0.17 sys + 246.87 cusr 18.73 csys = 266.08 CPU)
+Result: FAIL
+Failed 2/10 test programs. 2/68 subtests failed.</screen>
 
           <para>Don't worry. This is because of a missing
           <application>wkhtmltopdf</application> utility which is undergoing
@@ -204,12 +199,12 @@ exit
             is better in a printed document.</para>
           </note>
 
-          <screen><prompt>$</prompt> <command>JFEARN=http://jfearn.fedorapeople.org/wkhtmltopdf/f15
-MYSYSTEM=i686
+          <screen><prompt>$</prompt> <command>JFEARN=http://jfearn.fedorapeople.org/wkhtmltopdf/f15</command>
+<prompt>$</prompt> <command>MYSYSTEM=i686</command>
 ## For 64bit system use MYSYSTEM=x86_64 instead.
-wget $JFEARN/$MYSYSTEM/wkhtmltopdf-qt-4.7.1-1.git20110804.fc15.i686.rpm
-wget $JFEARN/$MYSYSTEM/wkhtmltopdf-0.10.0_rc2-1.fc15.i686.rpm
-</command></screen>
+<prompt>$</prompt> <command>wget</command> $JFEARN/$MYSYSTEM/wkhtmltopdf-qt-4.7.1-1.git20110804.fc15.i686.rpm
+<prompt>$</prompt> <command>wget</command> $JFEARN/$MYSYSTEM/wkhtmltopdf-0.10.0_rc2-1.fc15.i686.rpm
+</screen>
 
           <note>
             <para>If you use a 64 bit system, make sure to set
@@ -218,11 +213,10 @@ wget $JFEARN/$MYSYSTEM/wkhtmltopdf-0.10.0_rc2-1.fc15.i686.rpm
 
           <para>Once downloaded, install both rpms as follows:</para>
 
-          <screen><prompt>$</prompt> <command>sudo sh
-rpm -ivh wkhtmltopdf-qt*
-rpm -ivh --nodeps wkhtmltopdf-0*
-exit
-</command></screen>
+          <screen><prompt>$</prompt> <command>sudo</command> <command>sh</command>
+<prompt>#</prompt> <command>rpm</command> -ivh wkhtmltopdf-qt*
+<prompt>#</prompt> <command>rpm</command> -ivh --nodeps wkhtmltopdf-0*
+<prompt>#</prompt> <command>exit</command></screen>
 
           <para>You have to use the option to ignore dependencies on the
           latter rpm due to the <filename>ghostscript-fonts</filename> problem
@@ -235,10 +229,9 @@ exit
           <para>The final stage is to install Publican, even though the
           testing stage had a couple of sub-tests which failed.</para>
 
-          <screen><prompt>$</prompt> <command>sudo sh
-./Build test
-exit
-</command></screen>
+          <screen><prompt>$</prompt> <command>sudo</command> <command>sh</command>
+<prompt>#</prompt> <command>./Build</command> test
+<prompt>#</prompt> <command>exit</command></screen>
 
           <para>The following steps are optional but it's a good idea to test
           that everything is working before you spend time on your own
@@ -249,7 +242,7 @@ exit
           <para>Test the installed <application>Publican</application>
           build:</para>
 
-          <screen><prompt>$</prompt> <command>publican create --type=book --product=testing --version=1.2.3 --name=TestPublican</command>
+          <screen><prompt>$</prompt> <command>publican</command> create --type=book --product=testing --version=1.2.3 --name=TestPublican
   Processing file en-US/Author_Group.xml -&gt; en-US/Author_Group.xml
   Processing file en-US/Book_Info.xml -&gt; en-US/Book_Info.xml
   Processing file en-US/Chapter.xml -&gt; en-US/Chapter.xml
@@ -257,8 +250,8 @@ exit
   Processing file en-US/Revision_History.xml -&gt; en-US/Revision_History.xml
   Processing file en-US/TestPublican.xml -&gt; en-US/TestPublican.xml
 
-<prompt>$</prompt> <command>cd TestPublican/
-publican build --lang=all --formats=html,html-single,html-desktop,txt,pdf,epub</command>
+<prompt>$</prompt> <command>cd TestPublican/</command>
+<prompt>$</prompt> <command>publican</command> build --lang=all --formats=html,html-single,html-desktop,txt,pdf,epub
 </screen>
 
           <note>
@@ -266,9 +259,9 @@ publican build --lang=all --formats=html,html-single,html-desktop,txt,pdf,epub</
             <application>Publican</application> 2.9 on OpenSuse gave the
             following error:</para>
 
-            <screen><computeroutput>runtime error: file /usr/share/publican/xsl/epub.xsl element choose</computeroutput>
-<computeroutput>Variable 'epub.embedded.fonts' has not been declared.</computeroutput>
-<computeroutput> at /usr/lib/perl5/site_perl/5.14.2/Publican/Builder.pm line 915</computeroutput></screen>
+            <screen>runtime error: file /usr/share/publican/xsl/epub.xsl element choose
+Variable 'epub.embedded.fonts' has not been declared.
+ at /usr/lib/perl5/site_perl/5.14.2/Publican/Builder.pm line 915</screen>
 
             <para>No epub file was created. The individual working files were
             however, and can be built into an epub book using
